# log-pose

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: events_registry.md
infra/: init-db.sh
order_service/: .pre-commit-config.yaml  Dockerfile  pyproject.toml  start.sh
order_service/app/: app.py  config.py  database.py  enums.py  interfaces.py  main.py  models.py
order_service/app/api/: deps.py  router.py  schemas.py
order_service/app/repositories/: order.py  outbox.py  uow.py
order_service/app/services/: order.py
order_service/app/workers/: outbox_relay.py
order_service/migrations/: env.py
order_service/migrations/versions/: 2b1cddb5f113_add_order_and_order_item_tables.py  978dec8dd733_add_outbox_events_table.py
order_service/tests/: conftest.py
order_service/tests/e2e/: test_api.py
order_service/tests/integration/: test_order_repository.py  test_uow.py
order_service/tests/unit/: test_order_service.py  test_schemas.py
