[project]
name = "order-service"
version = "0.1.0"
description = "Log Pose Order Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
extend-exclude = [
    "migrations/versions",
    ".git",
    ".venv",
    "__pycache__",
    "alembic",
]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
